objects/cscfga__Configuration_Offer__c.object
<CustomObject>
    <fields>
        <fullName>csbb__High_Level_Product_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Level Product Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the offer will be active and available for configuration.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Baskets_Count__c</fullName>
        <description>Number of associated baskets. Only valid for template offers.</description>
        <inlineHelpText>Number of associated baskets. Only valid for template offers.</inlineHelpText>
        <label>Baskets_Count__c</label>
        <summaryForeignKey>cscfga__Template_Offer_Basket_Association__c.cscfga__Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cscfga__Category_Association_Count__c</fullName>
        <inlineHelpText>Field populated automatically based on number of Categories associated to the Offer.</inlineHelpText>
        <label>Category Association Count</label>
        <summaryForeignKey>cscfga__Offer_Category_Association__c.cscfga__Configuration_Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cscfga__Content__c</fullName>
        <inlineHelpText>Filed not in use.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Date_Range__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Date range used to make the Offer available only for a fixed time period.</inlineHelpText>
        <label>Dates Available</label>
        <referenceTo>cscfga__Date_Range__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Description__c</fullName>
        <inlineHelpText>Offer description.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Eligibility_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose from existing Eligibility Rules in order to restrict the sale to qualified customers only.</inlineHelpText>
        <label>Eligibility Rule</label>
        <referenceTo>cscfga__Eligibility_Rule__c</referenceTo>
        <relationshipName>Configuration_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Sequence__c</fullName>
        <inlineHelpText>The weight to be assigned to this Offer when sorting offers for display to the sales user.</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Shared_Context_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Filed not in use.</inlineHelpText>
        <label>Shared Context Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Offers (Shared Context)</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this will be a template offer, which is versioned and immutable once activated.</description>
        <inlineHelpText>Indicates that Offer is a template that can be used for creation of new offers or new templates.</inlineHelpText>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csexpimp1__guid__c</fullName>
        <description>GUID for JSON export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>GUID for JSON export/import</inlineHelpText>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>cscfga__All_Template_Offers</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Template Offers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cscfga__Template_Offers</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cscfga__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Template Offers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>csexpimp1__Guid_Format_Check</fullName>
        <active>true</active>
        <description>Validates the format of GUID, but allows for it to remain blank.</description>
        <errorConditionFormula>AND(NOT( REGEX( csexpimp1__guid__c , &quot;\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12}&quot;) )
, NOT(ISBLANK(csexpimp1__guid__c )))</errorConditionFormula>
        <errorDisplayField>csexpimp1__guid__c</errorDisplayField>
        <errorMessage>Required format of the GUID is xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
With x being any alphanumeric character (letter or digit).</errorMessage>
    </validationRules>
</CustomObject>